new functions added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,7 @@ export(findParams)
 export(findParts)
 export(getActivities)
 export(getCaptions)
+export(getChannelSections)
+export(getChannels)
 export(searchTube)
 export(youOAuth)
