getCommentThreads added getComments renamed (properly this time)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,7 @@ export(getActivities)
 export(getCaptions)
 export(getChannelSections)
 export(getChannels)
+export(getCommentThreads)
+export(getComments)
 export(searchTube)
 export(youOAuth)
