getCategories and getLanguages added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(findParams)
 export(findParts)
 export(getActivities)
 export(getCaptions)
+export(getCategories)
 export(getChannelSections)
 export(getChannels)
 export(getCommentThreads)
 export(getComments)
+export(getLanguages)
 export(searchTube)
 export(youOAuth)
