getCatgories renamed to getGuideCategories, getRegions added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,12 @@ export(findParams)
 export(findParts)
 export(getActivities)
 export(getCaptions)
-export(getCategories)
 export(getChannelSections)
 export(getChannels)
 export(getCommentThreads)
 export(getComments)
+export(getGuideCategories)
 export(getLanguages)
+export(getRegions)
 export(searchTube)
 export(youOAuth)
