--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getCommentThreads)
 export(getComments)
 export(getGuideCategories)
 export(getLanguages)
+export(getPlaylistItems)
 export(getRegions)
 export(searchTube)
 export(youOAuth)
