getPlaylists, getSubscriptions, getVideoCategories, init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,9 @@ export(getComments)
 export(getGuideCategories)
 export(getLanguages)
 export(getPlaylistItems)
+export(getPlaylists)
 export(getRegions)
+export(getSubscriptions)
+export(getVideoCategories)
 export(searchTube)
 export(youOAuth)
