--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(getPlaylists)
 export(getRegions)
 export(getSubscriptions)
 export(getVideoCategories)
+export(getVideos)
 export(searchTube)
 export(youOAuth)
