--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: R
-r_github_packages:
-  - jimhester/covr
 r_packages:
   - httr
   - jsonlite
   - plyr
+  - covr
 after_success:
   - Rscript -e 'library(covr);codecov()'
