--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ r_packages:
 - covr
 after_success:
 - Rscript -e 'covr::codecov()'
-env:
-- NOT_CRAN="true"
 before_install:
 - openssl aes-256-cbc -K $encrypted_73a17727440f_key -iv $encrypted_73a17727440f_iv
-  -in tests\\testthat\\token.R.enc -out tests\\testthat\\token.R -d
+  -in token_file.rds.enc -out tests\\testthat\\token_file.rds -d
