--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,18 @@
+# DO NOT CHANGE the "init" and "install" sections below
+
 # Download script file from GitHub
 init:
   ps: |
         $ErrorActionPreference = "Stop"
         Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
+
 install:
   ps: Bootstrap
-  
+
+# Adapt as necessary starting from here
+
 build_script:
-  - Rscript -e "source('https://bioconductor.org/biocLite.R')"
   - travis-tool.sh install_deps
 
 test_script:
@@ -17,7 +21,7 @@ test_script:
 on_failure:
   - 7z a failure.zip *.Rcheck\*
   - appveyor PushArtifact failure.zip
-  
+
 artifacts:
   - path: '*.Rcheck\**\*.log'
     name: Logs
