--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,5 @@ export(getVideoCategories)
 export(getVideos)
 export(searchTube)
 export(youOAuth)
+importFrom(methods,is)
+importFrom(stats,setNames)
